# photo_tools

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  LICENSE-samples  README.md  config.example.toml  consolidate.py  dedup.py  ingest.py  organize.py  photo.py  pyproject.toml  rename.py  requirements.txt  shoot.py
docs/sd-cards/: fujifilm-xt4.txt  ricoh-griii.txt
samples/: IMG_0878.DNG  IMG_0879.HEIC  IMG_1103.CR2  R0000573.DNG  README.md  _DSF4989.RAF
tests/: conftest.py  helpers.py  test_dedup.py  test_ingest_integration.py  test_ingest_unit.py  test_integration.py  test_rename.py  test_unit.py
